--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <a-marker preset="custom" type="pattern" url="/public/marker/pattern-球体.patt">
         <a-sphere position="0 1 0" radius="0.7" material="color: red"></a-sphere>
       </a-marker>
-      <a-marker preset="custom" type="pattern" url="/public/marker/pattern-立方体.patt">
+      <a-marker preset="custom" type="pattern" url="/public/marker/pattern-cube.patt">
         <a-box position="0 1 0" material="color: green"></a-box>
       </a-marker>
       <a-entity camera></a-entity>
